fix bug on travel_item on click more_vert

--- a/MyTrips/app/src/main/res/layout/main_travel_item.xml
+++ b/MyTrips/app/src/main/res/layout/main_travel_item.xml
@@ -67,8 +67,9 @@
         android:id="@+id/ivMenu"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:src="@drawable/ic_more_vert"
         android:paddingRight="8dp"
+        android:src="@drawable/ic_more_vert"
+        android:background="@drawable/bg_view_onclick"
         android:tint="@color/colorLabelTextCommon"
         android:onClick="onClick"
         app:layout_constraintBottom_toBottomOf="parent"
