--- a/MyTrips/app/src/main/res/layout/activity_welcome.xml
+++ b/MyTrips/app/src/main/res/layout/activity_welcome.xml
@@ -49,7 +49,7 @@
     <Button
         android:id="@+id/btnStarted"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/margin_normal"
+        android:layout_marginBottom="@dimen/margin_normal_16"
         style="@style/Button"
         android:text="Get Started"
         android:layout_width="match_parent"
