--- a/MyTrips/app/src/main/res/values/colors.xml
+++ b/MyTrips/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#2196F3</color>
     <color name="colorPrimaryDark">#1769AA</color>
     <color name="colorAccent">#42a5f5</color>
-    <color name="colorPrimaryLight">#69e2ff</color>
+    <color name="colorPrimaryLight">#42a5f5</color>
     <color name="colorButton">#1e88e5</color>
     <color name="colorOnSelect">#0D47A1</color>
     <color name="colorHeaderTitle">#37474f</color>
