--- a/MyTrips/app/src/main/res/values/styles.xml
+++ b/MyTrips/app/src/main/res/values/styles.xml
@@ -20,8 +20,8 @@
         <item name="android:textColor">@color/colorError</item>
         <item name="android:textSize">@dimen/label_text_content</item>
         <item name="android:paddingBottom">@dimen/spacing_content_vertical</item>
-        <item name="android:paddingLeft">@dimen/margin_normal</item>
-        <item name="android:paddingRight">@dimen/margin_normal</item>
+        <item name="android:paddingLeft">@dimen/margin_normal_16</item>
+        <item name="android:paddingRight">@dimen/margin_normal_16</item>
     </style>
     <style name="LabelTextCommon" parent="TextAppearance.AppCompat.Widget.TextView.SpinnerItem">
         <item name="android:textColor">@color/colorLabelTextCommon</item>
@@ -41,7 +41,7 @@
     </style>
 
     <style name="LabelTextHeader" parent="TextAppearance.AppCompat.Widget.TextView.SpinnerItem">
-        <item name="android:padding">@dimen/margin_normal</item>
+        <item name="android:padding">@dimen/margin_normal_16</item>
         <item name="android:textColor">@color/colorTextWhite</item>
         <item name="android:textSize">@dimen/label_header_text</item>
         <item name="android:textStyle">bold</item>
@@ -53,15 +53,15 @@
         <item name="android:background">@drawable/bg_button</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/colorTextWhite</item>
-        <item name="android:layout_marginLeft">@dimen/margin_normal</item>
-        <item name="android:layout_marginRight">@dimen/margin_normal</item>
+        <item name="android:layout_marginLeft">@dimen/margin_normal_16</item>
+        <item name="android:layout_marginRight">@dimen/margin_normal_16</item>
 
     </style>
 
     <style name="EditText" parent="Base.Widget.AppCompat.EditText">
         <item name="android:textColorHint">@color/colorEditTextHint</item>
         <item name="android:textColor">@color/colorEditText</item>
-        <item name="android:layout_margin">@dimen/margin_normal</item>
+        <item name="android:layout_margin">@dimen/margin_normal_16</item>
         <item name="android:textSize">@dimen/text_edit_size</item>
         <item name="android:padding">@dimen/padding_text_horizontal</item>
         <item name="android:background">@drawable/bg_line_edit_text</item>
@@ -74,6 +74,6 @@
         <item name="android:tint">@color/colorTextWhite</item>
         <item name="android:layout_alignParentBottom">true</item>
         <item name="android:layout_alignParentRight">true</item>
-        <item name="android:layout_margin">@dimen/margin_normal</item>
+        <item name="android:layout_margin">@dimen/margin_normal_16</item>
     </style>
 </resources>
