full text search -fts4  with android room

--- a/MyTrips/app/src/main/res/layout/activity_main.xml
+++ b/MyTrips/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:background="@drawable/bg_blue_view_onclick"
         android:paddingLeft="8dp"
         android:paddingRight="16dp"
-        android:src="@drawable/ic_more_vert"
+        android:src="@drawable/ic_sort"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
