edit-add-travel

--- a/MyTrips/app/src/main/res/layout/activity_main.xml
+++ b/MyTrips/app/src/main/res/layout/activity_main.xml
@@ -111,6 +111,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:tint="@android:color/white" />
-
-
+    <!--app:layout_behavior="com.vtcac.thuhuong.mytrips.utils.ScrollAwareFABBehavior"-->
 </androidx.constraintlayout.widget.ConstraintLayout>
