--- a/MyTrips/app/src/main/res/layout/activity_edit_travel.xml
+++ b/MyTrips/app/src/main/res/layout/activity_edit_travel.xml
@@ -25,10 +25,27 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tbToolbar">
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilEtTitle"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            android:layout_marginHorizontal="@dimen/margin_normal_16">
+            <!--android:layout_below="@+id/ll3"-->
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etTravelTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Travel title"
+                android:singleLine="true" />
+        </com.google.android.material.textfield.TextInputLayout>
         <LinearLayout
             android:id="@+id/ll1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/tilEtTitle"
             android:layout_marginHorizontal="@dimen/margin_normal_16"
             android:layout_marginTop="23dp">
 
@@ -132,28 +149,11 @@
                  android:text="Travel place" />
         </LinearLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilEtTitle"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/ll3"
-            android:layout_marginTop="28dp"
-            android:layout_marginHorizontal="@dimen/margin_normal_16">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etTravelTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Travel title"
-                android:singleLine="true" />
-        </com.google.android.material.textfield.TextInputLayout>
-
         <Button
             android:id="@+id/btnAddEdit"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tilEtTitle"
+            android:layout_below="@id/ll3"
             android:layout_alignParentRight="true"
             android:layout_marginTop="28dp"
             android:layout_marginHorizontal="@dimen/margin_normal_16"
