travel-plan edit-add

--- a/MyTrips/app/src/main/res/layout/activity_edit_travel.xml
+++ b/MyTrips/app/src/main/res/layout/activity_edit_travel.xml
@@ -35,7 +35,7 @@
             <!--android:layout_below="@+id/ll3"-->
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etTravelTitle"
+                android:id="@+id/etPlanTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Travel title"
