--- a/MyTrips/app/src/main/res/values/dimens.xml
+++ b/MyTrips/app/src/main/res/values/dimens.xml
@@ -11,15 +11,17 @@
     <dimen name="padding_text_horizontal">5dp</dimen>
     <dimen name="label_header_text">22sp</dimen>
     <dimen name="label_title_beside_image">16sp</dimen>
-    <dimen name="label_common_text" >14sp</dimen>
+    <dimen name="label_common_text">14sp</dimen>
     <dimen name="spacing_content_vertical">13dp</dimen>
     <dimen name="padding_image_circle">2dp</dimen>
     <dimen name="height_main_travel_item_image">56dp</dimen>
     <dimen name="width_main_travel_item_image">100dp</dimen>
-    <dimen name="height_list_item">88dp</dimen>
+    <dimen name="height_list_item_88">88dp</dimen>
     <dimen name="margin_vertical_list_item">16dp</dimen>
     <dimen name="margin_vertical_list">8dp</dimen>
     <dimen name="padding_left_list_item_text">20dp</dimen>
     <dimen name="width_height_square_image_search_list_item">40dp</dimen>
-
+    <dimen name="height_app_bar">152dp</dimen>
+    <dimen name="margin_32">32dp</dimen>
+    <dimen name="width_height_imgview_24">24dp</dimen>
 </resources>
