--- a/MyTrips/app/src/main/res/layout/dialog_image_viewer.xml
+++ b/MyTrips/app/src/main/res/layout/dialog_image_viewer.xml
@@ -11,60 +11,57 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
-    <TextView
-        android:id="@+id/title_txt"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:paddingVertical="@dimen/margin_normal_16"
+        android:layout_width="match_parent"
+        android:orientation="vertical"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_normal_16"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+        android:background="@color/color_transparent_black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="date time" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/place_txt"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_normal_16"
-        android:layout_marginEnd="@dimen/margin_normal_16"
-        android:gravity="center_vertical"
-        android:singleLine="true"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title_txt"
-        tools:text="place name" />
+        <TextView
+            android:id="@+id/title_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="@dimen/margin_normal_16"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            tools:text="date time" />
 
-    <TextView
-        android:id="@+id/subtitle_txt"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_normal_16"
-        android:layout_marginEnd="@dimen/margin_normal_16"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-        app:layout_anchor="@id/title_txt"
-        app:layout_anchorGravity="bottom"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/place_txt"
-        tools:text="place address" />
+        <TextView
+            android:id="@+id/place_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="@dimen/margin_normal_16"
+            android:singleLine="true"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
+            android:textStyle="bold"
+            tools:text="place name" />
+
+        <TextView
+            android:id="@+id/subtitle_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="@dimen/margin_normal_16"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+            tools:text="place address" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/desc_txt"
-        android:layout_width="0dp"
+        android:background="@color/color_transparent_black"
+        android:layout_width="match_parent"
+        android:padding="@dimen/margin_normal_16"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
