--- a/MyTrips/app/src/main/res/values/dimens.xml
+++ b/MyTrips/app/src/main/res/values/dimens.xml
@@ -14,9 +14,10 @@
     <dimen name="label_common_text">14sp</dimen>
     <dimen name="spacing_content_vertical">13dp</dimen>
     <dimen name="padding_image_circle">2dp</dimen>
-    <dimen name="height_main_travel_item_image">56dp</dimen>
+    <dimen name="height_main_travel_item_image">60dp</dimen>
     <dimen name="width_main_travel_item_image">100dp</dimen>
     <dimen name="height_list_item_88">88dp</dimen>
+    <dimen name="height_list_item_92">92dp</dimen>
     <dimen name="margin_vertical_list_item">16dp</dimen>
     <dimen name="margin_vertical_list">8dp</dimen>
     <dimen name="padding_left_list_item_text">20dp</dimen>
