--- a/MyTrips/app/src/main/res/layout/activity_searchable.xml
+++ b/MyTrips/app/src/main/res/layout/activity_searchable.xml
@@ -25,6 +25,7 @@
 
             <EditText
                 android:id="@+id/etTypeCity"
+                android:hint="Enter your visited city here"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:layout_marginLeft="80dp"
